src/objects/auSTPD__c.object
<CustomObject>
    <fields>
        <fullName>CommentOnly__c</fullName>
        <label>Comment Only</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auSTPD_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D_FillingDate__c</fullName>
        <label>D記入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayedDate__c</fullName>
        <label>DisplayedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FullLastModifiedDateValue__c</fullName>
        <formula>DATEVALUE(FullLastModifiedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullLastModifiedDateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FullLastModifiedDate__c</fullName>
        <formula>if ( MaxLastModifiedDate__c &gt; DisplayedDate__c, MaxLastModifiedDate__c, DisplayedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsCommentOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this STPD row is only for purpose to add free comments in the Timeline.</description>
        <label>IsCommentOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCompleteD__c</fullName>
        <label>IsCompleteD</label>
        <summarizedField>auSTPDItems__c.IsCompleteD__c</summarizedField>
        <summaryForeignKey>auSTPDItems__c.STPD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsCompleteP__c</fullName>
        <label>IsCompleteP</label>
        <summarizedField>auSTPDItems__c.IsCompleteP__c</summarizedField>
        <summaryForeignKey>auSTPDItems__c.STPD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsCompleteS__c</fullName>
        <formula>IF(ISBLANK(ThemaShort__c) &amp;&amp; ISBLANK(MemoShort__c) &amp;&amp; ISBLANK(ObjectiveShort__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCompleteS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCompleteT__c</fullName>
        <label>IsCompleteT</label>
        <summarizedField>auSTPDItems__c.IsCompleteT__c</summarizedField>
        <summaryForeignKey>auSTPDItems__c.STPD__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxLastModifiedDate__c</fullName>
        <label>MaxLastModifiedDate</label>
        <summarizedField>auSTPDItems__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>auSTPDItems__c.STPD__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MemoShort__c</fullName>
        <label>Memo (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectiveShort__c</fullName>
        <label>Objective (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_FillingDate__c</fullName>
        <label>P記入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecalculateSharingVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RecalculateSharingVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_FillingDate__c</fullName>
        <label>S記入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TemporarySaved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T_FillingDate__c</fullName>
        <label>T記入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysBlank__c</fullName>
        <label>TechnicalAlwaysBlank</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used to select the STPD related to the events. Should always be FALSE in the DB.</description>
        <label>TechnicalAlwaysFalse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThemaShortDisplayed__c</fullName>
        <formula>IF(LEN(ThemaShort__c) &gt; 100, LEFT(ThemaShort__c, 97) + &apos;...&apos; , ThemaShort__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thema (Short Displayed)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThemaShort__c</fullName>
        <label>Thema (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thema__c</fullName>
        <label>Thema</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>STPD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>STPD Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Account1stParent__c</fullName>
        <label>運営</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Account2ndParent__c</fullName>
        <label>一次</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>KDDISalesUser__c</fullName>
        <label>KDDI営業担当</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Honbu__c</fullName>
        <label>本部</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shisha__c</fullName>
        <label>支社</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Role_Shiten__c</fullName>
        <label>支店</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShopSameAccount1stParent__c</fullName>
        <label>ショップ・同運営</label>
    </sharingReasons>
</CustomObject>